search config for better ux and ui improvement